# Robsistors

./: Cargo.toml  README.md  Resistor_Calc.cpp  pseudo.txt
src/: main.rs
